<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/fifteen_dp"
    app:strokeColor="@color/purple_700"
    app:strokeWidth="5dp"
    tools:context=".presentation.ui.dialogs.exit.ExitDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:padding="@dimen/fifteen_dp"
        android:paddingBottom="@dimen/fifteen_dp">

        <TextView
            android:id="@+id/txt_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/text_warning"
            android:textColor="@color/red"
            android:textSize="@dimen/twenty_one_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingBottom="@dimen/fifteen_dp"
            android:text="@string/exit_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/text_yes"
            app:cornerRadius="@dimen/ten_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_negative"
            app:layout_constraintTop_toBottomOf="@id/dialog_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/text_no"
            app:cornerRadius="@dimen/ten_dp"
            app:layout_constraintEnd_toStartOf="@id/btn_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>