<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.students.list.ListOfStudentsFragment">

    <TextView
        android:id="@+id/list_of_students_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/list_of_students_title_text"
        android:textAlignment="center"
        android:textColor="@color/near_black"
        android:textSize="@dimen/thirty_sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/twelve_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <TextView
            android:id="@+id/category_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/category_number_text"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_one_sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/category_students_text"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_one_sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_number"
            app:layout_constraintRight_toLeftOf="@id/category_school"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/category_school_text"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_one_sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_students"
            app:layout_constraintRight_toLeftOf="@id/category_points"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/category_points_text"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_one_sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/students_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/twelve_dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_container"
        tools:listitem="@layout/item_students" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/twelve_dp"
        android:layout_marginEnd="@dimen/twelve_dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/ic_plus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:maxImageSize="@dimen/nineteen_dp"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>